Fixing wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,5 @@ label {
 
 #generated-report tr td:first-child{
     width:25%;
-    white-space:nowrap;
 }
 
